--- a/ansible/install-awx/tasks/pre-req.yml
+++ b/ansible/install-awx/tasks/pre-req.yml
@@ -29,6 +29,11 @@
     force: yes
 - name: Create file
   file:
+    path: /tmp/awx/installer
+    state: touch
+
+- name: Create file
+  file:
     path: /tmp/awx/installer/inventoryng
     state: touch
 
